# caUtils

./: .gitignore
get_doctors/: .gitignore  Cargo.toml
get_doctors/src/: database.rs  doctor_fetcher.rs  doctor_processor.rs  logger.rs  main.rs  models.rs  structs.rs  utils.rs
get_doctors_hours/: package-lock.json  package.json
get_doctors_hours/src/: main.ts  repeater.ts
get_doctors_hours/src/database/: database.ts  get_doctor_ids.ts
get_doctors_hours/src/requests/: consts.ts  get_doctors_hours.ts  parser.ts
get_doctors_hours/src/utils/: logger.ts
get_hours/: Cargo.toml
get_hours/.cargo/: config.example.toml
get_hours/src/: fetch_hours.rs  html_parser.rs  main.rs
get_hours_deprecated/: Cargo.toml
get_hours_deprecated/.cargo/: config.example.toml
get_hours_deprecated/src/: database.rs
