[package]
name = "get_doctors"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
indicatif = "0.17"
log = "0.4"
env_logger = "0.10"
sqlx = { version = "0.7", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
